docs: consolidate, clean build scaffolding, add onboarding + project story
The repo grew from POC to production-grade but the docs still read like a build in
progress. Cleaned up:

NEW
- docs/PROJECT-OVERVIEW.md — the missing "what is this whole thing" doc: the GTM /
  product-owner story (problem, product, World B differentiator, maturity path), the
  request lifecycle, and a module-by-module map (what each folder is + the gateway's
  internal shape).
- registry/README.md — onboarding a new business: explains the 3-level structure
  (domain → sub-domain → agent), what each folder/file is, naming conventions, and a
  step-by-step checklist with file templates. Answers "I can't tell what each folder is for."

REWRITTEN
- README.md — now a guided front-door tour: what it is → what you can do → spin up →
  walk every URL (LibreChat, glass-box, Langfuse traces/scores/experiments,
  Grafana/Loki/Tempo dashboards) with "where and what to look at" → onboarding → doc map.
- CLAUDE.md — 399→~150 lines: dropped the phase-loop/milestone build scaffolding; kept
  the locked stack, hard rules, World B invariants, the "how to add a domain" workflow.
- BUILD_REPORT.md — 1254→~80 lines: a concise status & verification record (capability
  table, how to re-verify, known limitations) instead of the per-phase build log.

REMOVED (retired build scaffolding; retained in git history)
- phases/PHASE-1..11.md (build loop complete)
- docs/{master-build-plan-consolidated, agent-registry-demo-spec,
  agent-registration-schema-a2a-aligned, implementation-checklist, PROMPT-AUDIT}.md
- z.ai-tiers.md (stack runs on OpenAI now)

Fixed the one dangling doc reference (WORLD-B-LOCKDOWN companion docs).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>